tests/fixtures/invalid/pointer_return_const_discard.c
int *bad(const int *value) {
    return value;
}

int main() {
    const int locked = 3;
    int *value = bad(&locked);
    return *value;
}
